[package]
name = "plan9"
version = "0.1.0"
authors = ["Matt Jibson <matt.jibson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nine = "0"
regex = "1"
lazy_static = "1"
byteorder = "1.1.0"
crossbeam-channel = "0.4"
