[package]
name = "acre"
version = "0.5.4"
authors = ["Matt Jibson <matt.jibson@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/mjibson/acre"

[dependencies]
anyhow = "1"
crossbeam-channel = "0.4"
diff = "0.1"
lazy_static = "1"
lsp-types = "0.91"
nine = "0.5"
plan9 = { path = "./plan9" }
regex = "1"
serde_json = { version = "1", features = ["raw_value"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
xdg = "2"
