[package]
name = "plan9"
description = "Plan9 interaction, based on github.com/9fans/go"
version = "0.1.0"
authors = ["Matt Jibson <matt.jibson@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/mjibson/acre"
documentation = "https://docs.rs/plan9"
keywords = ["plan9port", "acme"]

[dependencies]
anyhow = "1"
byteorder = "1"
crossbeam-channel = "0.4"
lazy_static = "1"
lsp-types = "0.74"
nine = "0.5"
regex = "1"
serde_json = { version = "1", features = ["raw_value"] }
serde = { version = "1.0", features = ["derive"] }
