[package]
name = "plan9"
description = "Plan9 interaction, based on github.com/9fans/go"
version = "0.1.1"
authors = ["Matt Jibson <matt.jibson@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/mjibson/acre"
documentation = "https://docs.rs/plan9"
keywords = ["plan9port", "acme"]

[dependencies]
anyhow = "1"
byteorder = "1"
crossbeam-channel = "0.4"
lazy_static = "1"
nine = "0.5"
regex = "1"
